@@ -299,7 +299,7 @@ ok En general una funcion de "zxvision_pressed_right_mouse_button()" que conside
 
 -pendiente 6128,664:
 *keyboard help
-*machine icon
+*machine icon. ok 6128
 *puerto DF en snapshot zsf
 *indicacion correcta de pagina rom en debug
 *si no hay pd765 enabled, se cuelga al hacer cat (en 664 tambien??)
@@ -311,3 +311,10 @@ ok En general una funcion de "zxvision_pressed_right_mouse_button()" que conside
 *machine icon
 *snapshot zsf
 *indicacion correcta de pagina rom en debug
+
+
+-guardar en config indicación de versión anterior usada (tanto build como id version)
+Si se ha hecho downgrade:
+*avisar por consola
+*errores al parsear la config no finalizan ZEsarUX
+*inicia ZEsarUX con un aviso del downgrade y ¿desactivando auto guardado de configuración?
