@@ -184,7 +184,8 @@ extern char *bitmap_button_ext_desktop_my_machine_spectrum_p2a[];
 extern char *bitmap_button_ext_desktop_my_machine_spectrum_p3[];
 extern char *bitmap_button_ext_desktop_my_machine_spectrum_48_spa[];
 extern char *bitmap_button_ext_desktop_my_machine_inves[];
-extern char *bitmap_button_ext_desktop_my_machine_cpc[];
+extern char *bitmap_button_ext_desktop_my_machine_cpc_464[];
+extern char *bitmap_button_ext_desktop_my_machine_cpc_6128[];
 extern char *bitmap_button_ext_desktop_my_machine_coleco[];
 extern char *bitmap_button_ext_desktop_my_machine_sms[];
 extern char *bitmap_button_ext_desktop_my_machine_sg1000[];
